[package]
name = "token-omnibus"
version = "0.1.0"
description = "Merke based token account accumilator"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_omnibus"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = {version = "0.19.0"}
solana-program = "1.8"
